# dish_images_processor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dish_images_processor/: app.py  dependencies.py
dish_images_processor/config/: logging.py  services.yml  settings.py
dish_images_processor/kafka/: consumer.py  producer.py  topics.py
dish_images_processor/models/: messages.py  preprocess.py
dish_images_processor/routers/: prod.py
dish_images_processor/routers/v0/: __init__.py  dev.py  prod.py
dish_images_processor/services/: base_service.py
dish_images_processor/utils/: concurrency.py  image_validation.py
tests/: conftest.py  test_config.py  test_endpoints.py  test_kafka.py  test_services.py  test_utils.py
