[tool.poetry]
name = "dish-images-processor"
version = "0.1.0"
description = ""
authors = ["ManuPotrel <71026308+ManuPotrel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dish_images_processor"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
confluent-kafka = "^2.7.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
fal-client = "^0.5.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
